--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.mycompany</groupId>
-	<artifactId>today</artifactId>
+	<artifactId>hellofirewproject</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>mule-application</packaging>
 
@@ -25,9 +25,30 @@
 				<artifactId>mule-maven-plugin</artifactId>
 				<version>${mule.maven.plugin.version}</version>
 				<extensions>true</extensions>
-				<configuration>
+				<configuration>				
+				<cloudHubDeployment>
+				
+				
+				  <uri>https://anypoint.mulesoft.com</uri>
+		          <muleVersion>${mule.version}</muleVersion> 
+		          <username>${username}</username> 
+		          <password>${password}</password> 
+		          <workers>${workers}</workers>
+		          <workerType>${worker.type}</workerType>
+		          <environment>${environment}</environment> 
+		          <applicationName>${application.name}</applicationName>
+		          <objectStoreV2>true</objectStoreV2>
+		          
+                  </cloudHubDeployment>
 				</configuration>
 			</plugin>
+			<plugin>
+  <groupId>org.apache.maven.plugins</groupId>
+  <artifactId>maven-deploy-plugin</artifactId>
+  <configuration>
+    <skip>true</skip>
+  </configuration>
+</plugin>
 		</plugins>
 	</build>
 
@@ -44,6 +65,29 @@
             <version>1.1.5</version>
             <classifier>mule-plugin</classifier>
         </dependency>
+            <dependency>
+            <groupId>org.mule.module</groupId>
+            <artifactId>mule-java-module</artifactId>
+            <version>1.2.5</version>
+            <classifier>mule-plugin</classifier>
+        </dependency>
+    	<dependency>
+            <groupId>org.mule.connectors</groupId>
+            <artifactId>mule-wsc-connector</artifactId>
+            <version>1.5.4</version>
+            <classifier>mule-plugin</classifier>
+        </dependency>
+    	<dependency>
+            <groupId>org.mule.modules</groupId>
+            <artifactId>mule-apikit-module</artifactId>
+            <version>1.3.4</version>
+            <classifier>mule-plugin</classifier>
+        </dependency>
+		 <dependency>		        
+		  	<groupId>org.eclipse.jetty</groupId>
+    		<artifactId>jetty-maven-plugin</artifactId>
+    		<version>9.4.26.v20200117</version>
+		</dependency>
 	</dependencies>
 
 	<repositories>
@@ -61,6 +105,8 @@
         </repository>
     </repositories>
     <pluginRepositories>
+    
+    
         <pluginRepository>
             <id>mulesoft-releases</id>
             <name>mulesoft release repository</name>
